force-app/main/default/objects/ARTL_Document__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>organizationDocument</fullName>
                <label>ORGANIZATION_DOCUMENT</label>
            </value>
            <value>
                <fullName>authorizedSignatory</fullName>
                <label>AUTHORIZED_SIGNATORY</label>
            </value>
            <value>
                <fullName>order</fullName>
                <label>ORDER</label>
            </value>
            <value>
                <fullName>email</fullName>
                <label>EMAIL</label>
            </value>
            <value>
                <fullName>serviceHandover</fullName>
                <label>SERVICE_HANDOVER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>