force-app/main/default/objects/ARTL_Document__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <label>Document Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST certificate</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
            <value>
                <fullName>TnC</fullName>
            </value>
            <value>
                <fullName>AutSigDoc</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Caf</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>OrderTemplate</fullName>
            </value>
            <value>
                <fullName>KDM</fullName>
            </value>
            <value>
                <fullName>DOA</fullName>
            </value>
            <value>
                <fullName>Welcome_Email</fullName>
            </value>
            <value>
                <fullName>LOC_Email</fullName>
            </value>
            <value>
                <fullName>Project_Status</fullName>
            </value>
            <value>
                <fullName>ServiceDocuments</fullName>
            </value>
            <value>
                <fullName>Site_Activation</fullName>
            </value>
            <value>
                <fullName>PM_Approval</fullName>
            </value>
            <value>
                <fullName>CPE_Recovery</fullName>
            </value>
            <value>
                <fullName>POI</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>