force-app/main/default/objects/ARTL_Document__c/fields/s3_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>s3_Document_URL__c</fullName>
    <description>Used to store s3 URL received from Document Upload Callout Response</description>
    <encryptionScheme>None</encryptionScheme>
    <label>s3 Document URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>