force-app/main/default/objects/ARTL_Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>poe</fullName>
                <label>POE</label>
            </value>
            <value>
                <fullName>live_photo</fullName>
                <label>LIVE_PHOTO</label>
            </value>
            <value>
                <fullName>order</fullName>
                <label>ORDER</label>
            </value>
            <value>
                <fullName>cust</fullName>
                <label>CUST</label>
            </value>
            <value>
                <fullName>misc</fullName>
                <label>MISC</label>
            </value>
            <value>
                <fullName>template</fullName>
                <label>TEMPLATE</label>
            </value>
            <value>
                <fullName>airtelRepresentative</fullName>
                <label>AIRTEL_REPRESENTATIVE</label>
            </value>
            <value>
                <fullName>airtelApprovals</fullName>
                <label>AIRTEL_APPROVALS</label>
            </value>
            <value>
                <fullName>wEmail</fullName>
                <label>WELCOME_EMAIL</label>
            </value>
            <value>
                <fullName>loc</fullName>
                <label>LOC</label>
            </value>
            <value>
                <fullName>projectProgress</fullName>
                <label>PROJECT_PROGRESS</label>
            </value>
            <value>
                <fullName>serviceHandover</fullName>
                <label>SERVICE_HANDOVER</label>
            </value>
            <value>
                <fullName>site</fullName>
                <label>SITE</label>
            </value>
            <value>
                <fullName>pm</fullName>
                <label>PM</label>
            </value>
            <value>
                <fullName>cpe</fullName>
                <label>CPE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>